feat: add PORT env variable
